@@ -168,6 +168,7 @@ Version 1.5
  - Add Fibaro FGKF601 Keyfob (Nechry)
  - Add BeNext TagReader500 from hvbommel (Nechry)
  - Restore Z-Wave.Me ZME_05461 (Nechry)
+ - Add Domux Wall Plug DX2SK-Z (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
